--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install Rust
+      run: rustup update nightly
+    - name: Select nightly
+      run: rustup default nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
