--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,23 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install Rust
-      run: |
-        rustup update nightly
-        rustup default nightly
-        rustup component add clippy
+      run: rustup update nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
     - name: Clippy
       run: cargo clippy -- -D warnings
-    - name: Install cargo-llvm-cov
-      uses: taiki-e/install-action@cargo-llvm-cov
-    - name: Generate code coverage
-      run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info --ignore-filename-regex bin/
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        files: lcov.info
-        fail_ci_if_error: true
