--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -30,4 +30,4 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         files: lcov.info
-        fail_ci_if_error: true
+        fail_ci_if_error: false
